2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_redis.c: add handling of REDIS_REPLY_INTEGER in function
      redis_select().
    * gw/dlr_redis.c: re-write the DLR messages counter retrieving. We can't
      use an INCR/DECR counter approach, since TTL'ed expiration won't correct
      these values and we end up in inaccurate counters. Rather use the DBSIZE
      command on the specific database used by redis, this is unique then. This
      is also more performative, since we don't need to update the counter 
      every time we change a key.
    
2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_redis.c: fix typo for REDIS_DEBUG macro. Add more possible
      debug output. NLC.
    * gw/dlr_redis.c: DLR-URLs need to be URL-[en|de]coded for redis and
      '%' needs to be escaped, since hiredis uses this inside redisCommand().
      This patchset fixes bug #690. Thanks to Lorenzo Bagni for reporting.
      [Msg-Id: <CAD8hAHGx520vLKnt0GOUhDRUPsoz14f=J4RO0PnH1dG3yUSNwQ@mail.gmail.com>]
      
2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.[ch]: reverting back to the direct dlr_add() including the use_dst
      flag in the function prototype, there is no way to handle an int type
      via va_args without knowin the number of arguments passed, only void*
      can be handled this way.
    * gw/smsc/smsc_*.c, gw/smsc/http/*.c: addopt the dlr_add() call to the
      function prototype. NLC.
      
2014-03-11  Stipe Tolj  <stolj at kannel.org>
    * soap/Makefile.in: make sure the gsoap enabled build is installing 
      correctly, so we have a working 'gw-config --libs' reference.
    * Makefile.in: install all lib*.a library in the install target, which
      ensures that the gsoap relevant libs are also installed to the target.
      
2014-02-11 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.c,gw/smsc/smsc_smpp.c: Added meta-data support for SMPP response
      PDUs.
