@@ -6,7 +6,7 @@
 #
 
 group = redis-connection
-id = redis
+id = redisdlr
 host = localhost
 port = 6379
 #password = foo
